initial commit based on https://github.com/bootique-examples/bootique-jersey-client-demo
updated with recent versions
updated to groovy